# optom-tools

./: .dockerignore  .env.copy  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yaml  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: build.yml  bumpversion.yml  docs.yml  publish.yml
docs/: index.md  prescription.md  visual_acuity.md
prescription/: index.html
search/: search_index.json
src/optom_tools/: __init__.py  main.py
src/optom_tools/prescription/: __init__.py  exceptions.py  models.py  prescription.py
src/optom_tools/utils/: __init__.py  clean_output.py  logger.py
src/optom_tools/visual_acuity/: __init__.py  exceptions.py  models.py  visual_acuity.py
src/project/: __init__.py  __main__.py  main.py
tests/: __init__.py  conftest.py  test_main.py  test_prescription.py  test_visual_acuity.py
tests/test_utils/: test_clean_output.py
visual_acuity/: index.html
